# spin

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docs/source/: conf.py  image_building.rst  index.rst  knowledge.rst  modules.rst  quickstart.rst  reporting_bugs.rst  spin.backend.rst  spin.build.rst  spin.cli.rst  spin.define.rst  spin.image.rst  spin.machine.rst  spin.plugin.api.rst  spin.plugin.libvirt.rst  spin.plugin.rst  spin.rst  spin.utils.rst
spin/: __init__.py  __main__.py  _protocols.py  errors.py  locks.py
spin/backend/: base.py
spin/cli/: __init__.py  _build.py  _check_system.py  _connect.py  _destroy.py  _down.py  _image.py  _init.py  _list.py  _register.py  _status.py  _up.py  _utils.py  _version.py  spinfile.jinja
spin/define/: __init__.py  basehelper.py  image.py  vm.py
spin/image/: database.py  edit.py  image.py  local_database.py
spin/machine/: action.py  connection.py  core.py  creation_steps.py  credentials.py  definition_steps.py  destruction_steps.py  hardware.py  machine.py  network.py  processor.py  shared.py  shell_input.py  start_steps.py  steps.py  term.py  tracker.py
spin/plugin/: __init__.py  cloud_init.py  ignition.py  images.py  qcow.py
spin/plugin/api/: load.py  register.py
spin/plugin/libvirt/: __init__.py  checks.py  core.py  machine.py  settings.py  steps.py  storage.py  utils.py  xml.py
spin/utils/: __init__.py  _ui_fancy.py  _ui_log.py  _ui_utils.py  cloud_init.py  config.py  constants.py  crypto.py  dependency.py  fileparse.py  info.py  load.py  sizes.py  spinfile.py  spinfile_loader.py  transfer.py  ui.py
tests/: conftest.py  test_build.py  test_cli.py  test_connection.py  test_credentials.py  test_database.py  test_define.py  test_depgraph.py  test_examples.py  test_hardware.py  test_image.py  test_image_definition.py  test_image_edit.py  test_libvirt.py  test_machine.py  test_misc.py  test_network.py  test_processor.py  test_resource.py  test_serialization.py  test_spinfile.py  test_start.py  test_steps.py  test_ui.py  test_utils.py  test_with_fake_backend.py  utils.py
tests/data/: alpine-boot-log  alpine-boot-serial  key.pub  passwd-ubuntu-focal  progress.out
tests/end-to-end/: libvirt+ubuntu:focal.sh
tests/examples/: README.md  image_build.py
tests/examples/machine/: cloud_init.py  command_on_creation.py  microos.py  minimal.py  multiple_vms.py  (+2 more)
tests/plugin/: test_api.py  test_cloud_init.py  test_ignition.py  test_images.py
(+7 files in other folders)
